# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//commonlibrary/ets_utils/ets_utils_config.gni")

ohos_shared_library("timer") {
  include_dirs = [
    "../../js_concurrent_module/common",
    "../timer",
  ]

  sources = [
    "../../js_concurrent_module/common/helper/napi_helper.cpp",
    "timer.cpp",
  ]

  deps = [ "$ace_napi_dep" ]

  external_deps = []

  if (is_linux && current_toolchain == host_toolchain) {
    deps += [ "$hilog_linux" ]
    defines = [
      "LINUX_PLATFORM",
      "PREVIEW",
    ]
  } else {
    if (is_standard_system) {
      external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
    } else {
      external_deps = [ "hilog:libhilog" ]
    }
  }

  external_deps += [ "hitrace_native:hitrace_meter" ]

  subsystem_name = "commonlibrary"
  innerapi_tags = [ "platformsdk" ]
  part_name = "ets_utils"
}

group("timer_packages") {
  deps = [ ":timer" ]
}
